syntax = "proto3";
option csharp_namespace = "Auto.FindVehicleEngine";
package findVehicle;
service FindVehicle {
  rpc GetVehicle (FindVehicleRequest) returns (FindVehicleReply);
}
message FindVehicleRequest {
  string vehicleRegistration = 1;
}
message FindVehicleReply {
  string modelCode = 1;
  sint32 year = 2;
  string registration = 3;
}